fix wrong width for top of table of contents

--- a/src/documents/styles/components/article-nav.less
+++ b/src/documents/styles/components/article-nav.less
@@ -66,7 +66,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     position: fixed;
-    width: 100%;
+    width: 300px;
     z-index: 100;
 
     & a {
